# auto-judge

./: .gitignore  .npmignore  Cargo.toml  Makefile.toml  README.md  package-lock.json  package.json  tsconfig.json
legacy/: .prettierrc  package.json
legacy/lib/: enterCommand.ts  getBaekjoonTestCase.ts  getCommandByLanguage.ts  printResult.ts
legacy/lib/types/: compileOption.ts  onlineJudgePlatform.ts
legacy/test/example/: boj_1000.kt
lib/: compile.ts  enterCommand.ts  getBaekjoonTestCase.ts  getCommandByLanguage.ts  index.ts  printResult.ts  runAutoJudge.ts  runTestCases.ts
lib/constants/: name.ts
lib/utils/: autoJudgeError.ts  deleteFolderRecursive.ts
src/: args.rs  compile.rs  fetch_test_cases.rs  get_args.rs  get_config.rs  main.rs  run_test_cases.rs
src/constants/: config.rs  fetch.rs
src/utils/: dir.rs  mod.rs  spinner.rs  time.rs
test/example/: boj_1000.java
test/source/: boj_1000.c  boj_1000.js  boj_1000.swift
tests/source/: boj_1000.cc  boj_1000.rb  boj_1000.ts
