[package]
name = "auto-judge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.17.8"
reqwest = "0.12.4"
scraper = "0.19.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
